Update JDK install scripts since 10 is GA now